--- a/app.json
+++ b/app.json
@@ -27,6 +27,13 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "packagerOpts": {
+      "config": "metro.config.js",
+      "sourceExts": [
+      
+      "svg"
+      ]
     }
   }
 }
