--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.9",
@@ -17,12 +18,19 @@
     "expo": "~42.0.1",
     "expo-av": "~9.2.3",
     "expo-barcode-scanner": "~10.2.2",
+    "expo-file-system": "^13.0.3",
+    "expo-permissions": "^13.0.3",
     "expo-status-bar": "~1.0.4",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-chart-kit": "^6.11.0",
+    "react-native-dropdown-picker": "^5.2.3",
+    "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.2",
     "react-native-safe-area-context": "3.2.0",
@@ -31,12 +39,20 @@
     "react-native-svg-animations": "^0.2.6",
     "react-native-unimodules": "^0.14.8",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "11.6.2",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "victory-native": "^36.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "react-native-svg-transformer": "^0.14.3"
+    "@testing-library/react-native": "^8.0.0",
+    "jest-expo": "^43.0.1",
+    "react-native-svg-transformer": "^0.14.3",
+    "xlsx": "^0.17.3"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "private": true,
   "proxy": "http://localhost:5000"
