--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-av": "~9.2.3",
     "expo-barcode-scanner": "~10.2.2",
     "expo-file-system": "^13.0.3",
+    "expo-linear-gradient": "~9.2.0",
     "expo-permissions": "^13.0.3",
     "expo-status-bar": "~1.0.4",
     "lodash": "^4.17.21",
