--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.9",
+    "@react-native-async-storage/async-storage": "^1.15.14",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
@@ -18,8 +18,10 @@
     "expo": "~42.0.1",
     "expo-av": "~9.2.3",
     "expo-barcode-scanner": "~10.2.2",
+    "expo-constants": "~11.0.1",
     "expo-file-system": "^13.0.3",
     "expo-linear-gradient": "~9.2.0",
+    "expo-notifications": "~0.12.3",
     "expo-permissions": "^13.0.3",
     "expo-status-bar": "~1.0.4",
     "lodash": "^4.17.21",
