--- a/package.json
+++ b/package.json
@@ -5,57 +5,53 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
-    "test": "jest"
+    "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.14",
+    "@babel/helper-skip-transparent-expression-wrappers": ">=7.18.9",
+    "@react-native-async-storage/async-storage": ">=1.17.10",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^6.0.9",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/native-stack": "^6.2.5",
-    "axios": "^0.22.0",
-    "expo": "~42.0.1",
-    "expo-av": "~9.2.3",
-    "expo-barcode-scanner": "~10.2.2",
-    "expo-constants": "~11.0.1",
-    "expo-file-system": "^13.0.3",
-    "expo-linear-gradient": "~9.2.0",
-    "expo-notifications": "~0.12.3",
-    "expo-permissions": "^13.0.3",
-    "expo-status-bar": "~1.0.4",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-chart-kit": "^6.11.0",
-    "react-native-dropdown-picker": "^5.2.3",
-    "react-native-fs": "^2.18.0",
-    "react-native-gesture-handler": "^1.10.3",
-    "react-native-loading-spinner-overlay": "^2.0.0",
-    "react-native-paper": "^4.9.2",
-    "react-native-reanimated": "^2.2.2",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-svg": "^12.1.1",
-    "react-native-svg-animations": "^0.2.6",
-    "react-native-unimodules": "^0.14.8",
-    "react-native-web": "~0.13.12",
-    "react-native-webview": "11.6.2",
-    "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
-    "victory-native": "^36.2.0"
+    "@react-navigation/bottom-tabs": ">=6.4.0",
+    "@react-navigation/native": ">=6.0.13",
+    "@react-navigation/native-stack": ">=6.9.0",
+    "axios": ">=0.27.2",
+    "expo": ">=46.0.10",
+    "expo-av": ">=12.0.4",
+    "expo-barcode-scanner": ">=11.4.0",
+    "expo-constants": ">=13.2.4",
+    "expo-file-system": ">=14.1.0",
+    "expo-linear-gradient": ">=11.4.0",
+    "expo-notifications": ">=0.16.1",
+    "expo-permissions": ">=13.2.0",
+    "expo-status-bar": ">=1.4.0",
+    "lodash": ">=4.17.21",
+    "moment": ">=2.29.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.70.1",
+    "react-native-chart-kit": ">=6.12.0",
+    "react-native-dropdown-picker": ">=5.4.2",
+    "react-native-fs": ">=2.20.0",
+    "react-native-gesture-handler": ">=2.6.2",
+    "react-native-loading-spinner-overlay": ">=3.0.1",
+    "react-native-paper": ">=4.12.4",
+    "react-native-reanimated": ">=2.10.0",
+    "react-native-safe-area-context": "4.3.4",
+    "react-native-screens": ">=3.17.0",
+    "react-native-svg": "13.2.0",
+    "react-native-svg-animations": ">=0.2.6",
+    "react-native-unimodules": ">=0.14.8",
+    "react-native-web": ">=0.18.9",
+    "react-native-webview": "11.23.1",
+    "react-navigation": ">=4.4.4",
+    "react-navigation-stack": ">=2.10.4",
+    "victory-native": ">=36.6.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@testing-library/react-native": "^8.0.0",
-    "jest-expo": "^43.0.1",
-    "react-native-svg-transformer": "^0.14.3",
-    "xlsx": "^0.17.3"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "@babel/core": ">=7.19.1",
+    "@testing-library/react-native": ">=11.1.0",
+    "react-native-svg-transformer": ">=1.0.0",
+    "xlsx": ">=0.18.5"
   },
   "private": true,
   "proxy": "http://localhost:5000"
